vlib/v/checker/tests/interface_sameness_check_for_mutable_methods.out
vlib/v/checker/tests/interface_sameness_check_for_mutable_methods.vv:15:6: error: `St` incorrectly implements method `method` of interface `Interface`: expected return type `u32`
   13 |
   14 | fn bar() {
   15 |     foo(St{})
      |         ~~~~
   16 | }
Details: main.Interface has `fn method(mut x main.Interface) u32`
         main.St has `fn method(st main.St) int`
